--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="background-color: #a2f1b0;">1</div>
+    <div style="background-color: #a2f1b0;">2</div>
+    <div style="background-color: #a2f1b0;">3</div>
+    <div style="background-color: #a2f1b0;">4</div>
+    <div style="background-color: #a2f1b0;">5</div>
 </body>
 </html>
