--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div style="background-color: #a2f1b0;">1</div>
-    <div style="background-color: #a2f1b0;">2</div>
-    <div style="background-color: #a2f1b0;">3</div>
-    <div style="background-color: #a2f1b0;">4</div>
-    <div style="background-color: #a2f1b0;">5</div>
+    <div style="background-color: #0d4a18;">2</div>
+    <div style="background-color: #6647c5;">3</div>
+    <div style="background-color: #db8693;">4</div>
+    <div style="background-color: #e072f9;">5</div>
 </body>
 </html>
