--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="background-color: #a2f1b0;">1</div>
-    <div style="background-color: #0d4a18;">2</div>
-    <div style="background-color: #6647c5;">3</div>
-    <div style="background-color: #db8693;">4</div>
-    <div style="background-color: #e072f9;">5</div>
+    <div style="background-color: #a2f1b0; width: 100%; float: left;">1</div>
+    <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
+    <div style="background-color: #6647c5; width: 40%; float: left;">3</div>
+    <div style="background-color: #db8693; width: 30%; float: left;">4</div>
+    <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
 </body>
 </html>
