--- a/index.html
+++ b/index.html
@@ -3,14 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clase 1</title>
+
+    <!--
+        Ignacio Quinteros Fuentes
+    -->
 </head>
 <body>
+    <h1>Imágenes</h1>
+    <h2>Clase: 20/08/2020</h2>
+
+    <div style="background-color: #a2f1b0; width: 100%; float: left;">
+        <img src="assets/bird.jpg"/>
+    </div>
+    <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
+    <div style="background-color: #6647c5; width: 40%; float: left;">3</div>
+    <div style="background-color: #db8693; width: 30%; float: right;">4</div>
+    <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
+
     <h1>Formas de estructurar Divs</h1>
+    <h2>Clase: 20/08/2020</h2>
 
     <div style="background-color: #a2f1b0; width: 100%; float: left;">1</div>
     <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
     <div style="background-color: #6647c5; width: 40%; float: left;"></div>
+    <!--
+        Se usar la propiedad float, establecida en right
+        para que quede en el lado derecho
+    -->
     <div style="background-color: #db8693; width: 30%; float: right;">4</div>
     <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
 
@@ -18,6 +38,9 @@
 
     <div style="background-color: #a2f1b0; width: 100%; float: left;">1</div>
     <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
+    <!--
+        Se usa &nbsp para que el div tenga contenido
+    -->
     <div style="background-color: #6647c5; width: 40%; float: left;">&nbsp;</div>
     <div style="background-color: #db8693; width: 30%; float: left;">4</div>
     <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
@@ -26,6 +49,9 @@
 
     <div style="background-color: #a2f1b0; width: 100%; float: left;">1</div>
     <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
+    <!--
+        Se usa <br> para que el div tenga contenido
+    -->
     <div style="background-color: #6647c5; width: 40%; float: left;"><br></div>
     <div style="background-color: #db8693; width: 30%; float: left;">4</div>
     <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
