--- a/index.html
+++ b/index.html
@@ -1,25 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Ignacio Quinteros Fuentes-->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase 1</title>
 
-    <!--
-        Ignacio Quinteros Fuentes
-    -->
+    <!--Estilo dentro del mismo html-->
+    <style type="text/css">
+        
+        /* # -> Para ser usado en "id". Debería usarse para un solo elemento, una sola vez*/
+        #banner{
+            background-color: #a2f1b0;
+            width: 100%;
+            height: 400px;
+            float: left;
+        }
+
+        /* . -> Se crea como "clase". Puede ser usado en múltiples elementos*/
+        .mensaje{
+
+        }
+
+        /* Para modificar el estilo directamente de componentes de html */
+        body{
+
+        }
+    </style>
 </head>
 <body>
-    <h1>Imágenes</h1>
+    <h1>Usar identificadores CSS</h1>
     <h2>Clase: 20/08/2020</h2>
 
-    <div style="background-color: #a2f1b0; width: 100%; float: left;">
-        <img src="assets/bird.jpg"/>
+    <div id="banner">
+        <img src="assets/bird.jpg" style="width: 100%; height: 400px; object-fit: cover;"/>
     </div>
     <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
     <div style="background-color: #6647c5; width: 40%; float: left;">3</div>
     <div style="background-color: #db8693; width: 30%; float: right;">4</div>
     <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
+
+    <div style="height: 100px;">&nbsp;</div>
+
+    <h1>Imágenes</h1>
+    <h2>Clase: 20/08/2020</h2>
+
+    <div style="background-color: #a2f1b0; width: 100%; height: 400px; float: left;">
+        <img src="assets/bird.jpg" style="width: 100%; height: 400px; object-fit: cover;"/>
+    </div>
+    <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
+    <div style="background-color: #6647c5; width: 40%; float: left;">3</div>
+    <div style="background-color: #db8693; width: 30%; float: right;">4</div>
+    <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
+
+    <div style="height: 100px;">&nbsp;</div>
 
     <h1>Formas de estructurar Divs</h1>
     <h2>Clase: 20/08/2020</h2>
