--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
         }
 
         /* . -> Se crea como "clase". Puede ser usado en múltiples elementos*/
-        .mensaje{
-
+        .floatLeft{
+            float: left;
+        }
+        .floatRight{
+            float: right;
         }
 
         /* Para modificar el estilo directamente de componentes de html */
-        body{
-
+        img{
+            /* Todas las imágenes ajustarán la propiedad "object-fit" a cover*/
+            object-fit: cover; 
         }
     </style>
 </head>
@@ -37,9 +41,10 @@
         <img src="assets/bird.jpg" style="width: 100%; height: 400px; object-fit: cover;"/>
     </div>
     <div style="background-color: #0d4a18; width: 30%; float: left;">2</div>
-    <div style="background-color: #6647c5; width: 40%; float: left;">3</div>
-    <div style="background-color: #db8693; width: 30%; float: right;">4</div>
-    <div style="background-color: #e072f9; width: 100%; float: left;">5</div>
+    <!-- Usar las "clases" definidas en la etiqueta style-->
+    <div class="floatLeft" style="background-color: #6647c5; width: 40%;">3</div>
+    <div class="floatRight" style="background-color: #db8693; width: 30%;">4</div>
+    <div class="floatLeft" style="background-color: #e072f9; width: 100%;">5</div>
 
     <div style="height: 100px;">&nbsp;</div>
 
