--- a/inicio.html
+++ b/inicio.html
@@ -60,14 +60,26 @@
         -->
         <div class="title">Título</div>
 
-        <!-- Aquí irá la columna izquierda -->
+        <!-- 
+            Aquí irá la columna izquierda 
+
+            Tiene el estilo "column", declarado en el archivo css "style_inicio"
+        -->
         <div class="column"></div>
 
-        <!-- Aquí irá el contenido -->
-        <div class="content">
+        <!--
+             Aquí irá el contenido 
+
+             Tiene el estilo "content", declarado en el archivo css "style_inicio"
+        -->
+        <div id="content">
             
-            <!-- Aquí irá un párrafo -->
-            <div class="parrafo">
+            <!--
+                Aquí irá un párrafo 
+
+                Tiene el estilo "paragraph", declarado en el archivo css "style_inicio"
+            -->
+            <div class="paragraph">
                 <!-- 
                     Texto de relleno.
                     El texto de relleno, puede obtenerse buscando "Lorem Ipsum"
@@ -83,10 +95,16 @@
             <!-- 
                 Aquí irán los thumbnails 
 
-                Thumbnails, son miniaturas. Es decir, imágenes aal final del día
+                Thumbnails, son miniaturas. Es decir, imágenes pequeñas al final del día
             -->
-            <div></div>
-            <div></div>
+            <!-- 
+                Usar el estilo de thumbnail y la imagen definida en el archivo css
+                "style_inicio"
+            -->
+            <div class="thumbnail"></div>
+
+            <!-- Usar el estilo de thumbnailNoDiv, definido en el archivo css style_inicio -->
+            <img class="thumbnailNoDiv" src="assets/sandcastle.jpg"/>
 
         </div>
     </div>
