Botonera. Final de la clase

--- a/inicio.html
+++ b/inicio.html
@@ -48,7 +48,32 @@
 
             Tiene el estilo "nav", declarado en el archivo css "style_inicio"
         -->
-        <div id="nav"></div>
+        <div id="nav">
+
+            <!-- 
+                Aquí irá otro div, para controlar dónde colocar el menú de navegación
+                (Queremos centrar este div "hijo")
+            -->
+            <div id="botonera">
+
+            <!-- 
+                Se creará una lista desordenada.
+                "ul" representa esa lista desordenada de elementos
+            -->
+            <ul id="boton">
+                <!-- 
+                    "li" es un elemento de una lista.
+                    Por otra parte, "a" es para un contenido con hipervínculo
+                -->
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="#">Galería</a></li>
+                <li><a href="#">Contáctenos</a></li>
+            </ul>
+
+            </div>
+
+        </div>
 
         <!-- 
             Aquí irá el título 
