--- a/inicio.html
+++ b/inicio.html
@@ -65,10 +65,10 @@
                     "li" es un elemento de una lista.
                     Por otra parte, "a" es para un contenido con hipervínculo
                 -->
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Noticias</a></li>
-                <li><a href="#">Galería</a></li>
-                <li><a href="#">Contáctenos</a></li>
+                <li><a href="inicio.html">Inicio</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
+                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="contacto.html">Contáctenos</a></li>
             </ul>
 
             </div>
