Preparar página de Noticias

--- a/noticias.html
+++ b/noticias.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Noticias</title>
 
     <link rel="stylesheet" type="text/css" href="css/style_inicio.css">
 </head>
@@ -21,10 +21,10 @@
         <div id="nav">
             <div id="botonera">
             <ul id="boton">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Noticias</a></li>
-                <li><a href="#">Galería</a></li>
-                <li><a href="#">Contáctenos</a></li>
+                <li><a href="inicio.html">Inicio</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
+                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="contacto.html">Contáctenos</a></li>
             </ul>
 
             </div>
@@ -34,16 +34,8 @@
         <div class="title">Título</div>
 
         <div class="column"></div>
-        
+
         <div id="content">
-            <div class="paragraph">
-                Lorem ipsum dolor sit amet consectetur adipiscing, elit proin ut quam curae, iaculis conubia nascetur tempus praesent. Nullam tortor accumsan nec aliquam interdum condimentum vestibulum, netus proin nibh ridiculus egestas sollicitudin varius pellentesque, fames ultricies ac nisl felis viverra. A bibendum auctor facilisi erat luctus venenatis suscipit congue nisl semper sapien, ultrices ad torquent urna nam sollicitudin sociosqu dictumst elementum varius, imperdiet magna feugiat massa justo litora interdum nec montes curabitur.
-
-                Venenatis aliquam montes vestibulum felis non himenaeos vivamus, mauris dictum ante fusce odio sociosqu. Dapibus sapien fermentum ligula vestibulum aliquam semper primis phasellus faucibus cras, dictumst enim in erat sodales ante duis habitant tincidunt ornare, condimentum interdum aliquet tristique ac eu urna nibh nostra. Cursus imperdiet posuere ut conubia porta malesuada duis cum, nisl metus ante habitasse elementum pulvinar sed donec, ad aptent torquent eros at inceptos massa.
-            </div>
-
-            <div class="thumbnail"></div>
-            <img class="thumbnailNoDiv" src="assets/sandcastle.jpg"/>
 
         </div>
     </div>
