--- a/noticias.html
+++ b/noticias.html
@@ -36,7 +36,21 @@
         <div class="column"></div>
 
         <div id="content">
+            <!-- Div padre -->
+            <div>
+                <!-- Div hijo -->
+                <div>
+                    <!-- Span, que tendrá el texto -->
+                    <span>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit mollis, mus nisi tristique lobortis molestie porttitor bibendum est natoque, tortor aliquam phasellus potenti fames erat ante. Neque fringilla vivamus curabitur mauris praesent ultrices elementum, fames rutrum sociosqu dictum cursus pretium per, a suscipit tellus pellentesque magna augue. Conubia integer quis felis curabitur senectus pellentesque vivamus ut a quam inceptos, ultricies dui nunc nostra metus varius fusce purus platea.
+                    </span>
+                </div>
+            </div>
 
+            <!-- Div del video -->
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BZxnKhyBOVo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
