Nuevos estilos a Noticias

--- a/noticias.html
+++ b/noticias.html
@@ -11,7 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
 
+    <!-- Estilos de la clase anterior -->
     <link rel="stylesheet" type="text/css" href="css/style_inicio.css">
+    <!-- Estilo de los nuevos estilos usados en esta clase -->
+    <link rel="stylesheet" type="text/css" href="css/style_noticias.css">
 </head>
 <body>
 
@@ -20,15 +23,13 @@
 
         <div id="nav">
             <div id="botonera">
-            <ul id="boton">
-                <li><a href="inicio.html">Inicio</a></li>
-                <li><a href="noticias.html">Noticias</a></li>
-                <li><a href="galeria.html">Galería</a></li>
-                <li><a href="contacto.html">Contáctenos</a></li>
-            </ul>
-
+                <ul id="boton">
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="noticias.html">Noticias</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
+                    <li><a href="contacto.html">Contáctenos</a></li>
+                </ul>
             </div>
-
         </div>
 
         <div class="title">Título</div>
@@ -37,9 +38,9 @@
 
         <div id="content">
             <!-- Div padre -->
-            <div>
+            <div class="pNoticias">
                 <!-- Div hijo -->
-                <div>
+                <div class="pNoticias">
                     <!-- Span, que tendrá el texto -->
                     <span>
                         Lorem ipsum dolor sit amet consectetur adipiscing elit mollis, mus nisi tristique lobortis molestie porttitor bibendum est natoque, tortor aliquam phasellus potenti fames erat ante. Neque fringilla vivamus curabitur mauris praesent ultrices elementum, fames rutrum sociosqu dictum cursus pretium per, a suscipit tellus pellentesque magna augue. Conubia integer quis felis curabitur senectus pellentesque vivamus ut a quam inceptos, ultricies dui nunc nostra metus varius fusce purus platea.
