--- a/noticias.html
+++ b/noticias.html
@@ -43,15 +43,39 @@
                 <div class="pNoticias">
                     <!-- Span, que tendrá el texto -->
                     <span>
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit mollis, mus nisi tristique lobortis molestie porttitor bibendum est natoque, tortor aliquam phasellus potenti fames erat ante. Neque fringilla vivamus curabitur mauris praesent ultrices elementum, fames rutrum sociosqu dictum cursus pretium per, a suscipit tellus pellentesque magna augue. Conubia integer quis felis curabitur senectus pellentesque vivamus ut a quam inceptos, ultricies dui nunc nostra metus varius fusce purus platea.
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit mollis, mus nisi tristique lobortis molestie porttitor bibendum est natoque, tortor aliquam phasellus potenti fames erat ante. Neque fringilla vivamus curabitur mauris praesent ultrices elementum, fames rutrum sociosqu dictum cursus pretium per, a suscipit tellus pellentesque magna augue. Conubia integer quis felis curabitur senectus pellentesque vivamus ut a quam inceptos, 
+                        <span class="alerta">ultricies dui nunc nostra metus varius fusce purus platea.</span>
                     </span>
                 </div>
+                
+            </div>
+
+            <!--
+                SEGUNDA NOTICIA
+                Div Padre
+            -->
+            <div>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5sNuDu4dE8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <!-- Div padre -->
+            <div class="pNoticias">
+                <!-- Div hijo -->
+                <div class="pNoticias">
+                    <!-- Span, que tendrá el texto -->
+                    <span>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit mollis, mus nisi tristique lobortis molestie porttitor bibendum est natoque, tortor aliquam phasellus potenti fames erat ante. Neque fringilla vivamus curabitur mauris praesent ultrices elementum, fames rutrum sociosqu dictum cursus pretium per, a suscipit tellus pellentesque magna augue. Conubia integer quis felis curabitur senectus pellentesque vivamus ut a quam inceptos, 
+                        <span class="alerta">ultricies dui nunc nostra metus varius fusce purus platea.</span>
+                    </span>
+                </div>
+                
             </div>
 
             <!-- Div del video -->
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/BZxnKhyBOVo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5sNuDu4dE8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+
         </div>
     </div>
 
