--- a/tarea/noticias.html
+++ b/tarea/noticias.html
@@ -21,7 +21,7 @@
             <h1 class="title">Ciencia</h1>
 
             <div id="nav">
-                <ul> 
+                <ul class="main-nav"> 
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="noticias.html">Noticias</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -48,27 +48,17 @@
             </div>
 
             <div id="content">
-                <div class="main-message">
-                    <h2 class="text-center text-shadow">Encuentra las últimas noticias de Ciencia</h2>
-                    <p class="text-center">
-                        Bienvenido a nuestra página llena de contenido científico.
-                        Encontrarás noticias, curiosidades y blogpost de datos científicos
-                        de interés para la comunidad.
-                    </p>
-                </div>
 
-                <hr class="top-margin-50">
+                <h2 class="text-center">Últimas Noticias</h2>
 
-                <h2 class="text-center top-margin-50">Últimas Noticias</h2>
-
-                <a href="news/agujero.html">
+                <a href="">
                     <div class="main-article">
                         <img src="assets/images/universe.jpg" alt="Universe" class="main-img-size main-img">
-                        <h2><a href="news/agujero.html">Agujero negro se vuelve blanco</a></h2>
+                        <h2><a href="">Agujero negro se vuelve blanco</a></h2>
                         <p>Agujero negro supermasivo, se da cuenta que no le gusta el negro,
                             por lo que se volvió blanco, y ahora está arrasando con todo el 
                             universo. Actualmente se dirige a la estrella XDSFKJAS.
-                            <a class="more" href="news/agujero.html" >Ver más</a>
+                            <a class="more" href="#" >Ver más</a>
                         </p>
                     </div>
                 </a>
