--- a/soluciones/ImagenArriba/index.html
+++ b/soluciones/ImagenArriba/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Imagen Arriba</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +25,7 @@
             <img src="images/image.jpg" alt="Montaña">
             <p>Aquí está la parte de abajo del texto</p>
         </div>
-        
+
     </div>
 
 </body>
